--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="action_settings">Settings</string>
     <string name="need_help">Need help?</string>
     <string name="thank_you_for_shopping_at">Thank you for shopping at</string>
+    <string name="splash_screen_statement">Aaccusamus et iusto odio dignissimos ducimus qui blanditiis praesentiu.</string>
+    <string name="point_of_sale">Point of Sale</string>
 </resources>
