--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="splash_screen_statement">Aaccusamus et iusto odio dignissimos ducimus qui blanditiis praesentiu.</string>
     <string name="point_of_sale">Point of Sale</string>
     <string name="welcome_msg">Welcome to the <b>SmartCash POS</b>.\nPlease scan your Cashier card to start.</string>
+    <string name="by_continuing_you_agree_to_the_payments_terms_of_service_and_privacy_notice">By continuing, you agree to the Payments <u>Terms of Service</u> and <u>Privacy Notice</u></string>
 </resources>
